--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -573,7 +573,7 @@
 
                                     <div ng-hide="setRandomWay()">
                                         <br/>
-                                        <div class="col-xs-3">
+                                        <div class="col-xs-2">
                                             <br/>
                                             <label>Dynamic item type</label>
                                             <select class="form-control" ng-model="newDynamicItem.type">
@@ -583,14 +583,14 @@
                                             </select>
                                         </div>
 
-                                        <div class="col-xs-3">
+                                        <div class="col-xs-2">
                                             <br/>
                                             <label>Number of items</label>
                                              <input ng-model="randomWay.numberDynamicItems" class="form-control"/>
                                         </div>  
 
-                                        <div class="col-xs-3">
-                                            <br/>
+                                        <div class="col-xs-2">
+                                            <br/><br/>
                                             <label>Way type</label>
                                             <select class="form-control" ng-model="randomWay.wayType">
                                                 <option value="motorway">motorway</option>
@@ -603,8 +603,14 @@
                                                 <option value="service">service</option>
                                             </select>                                         
                                         </div>
+                                        
+                                        <div class="col-xs-6">
+                                            <br/><br/>
+                                            <label>Minimum distance to travel (meters)</label>
+                                            <input ng-model="randomWay.distance" class="form-control"/>
+                                        </div>
 
-                                         <div class="col-sm-3">
+                                         <div class="col-sm-12">
                                              <br/><br/>
                                              <button ng-show="loadRandomWay" type="button" class="btn btn-primary btn-block" ng-click="generateRandomWay()">Generate random way</button>
                                         </div>
@@ -1257,6 +1263,7 @@
               <div class="modal-body">  
                   <div class="row">      
                       <div class="col-xs-6">
+                          <br/><br/>
                           <label>Way type</label>
                           <select class="form-control" ng-model="randomWay.wayType">
                               <option value="motorway">motorway</option>
@@ -1268,6 +1275,12 @@
                               <option value="residential">residential</option>
                               <option value="service">service</option>    
                           </select>           
+                      </div>
+                      
+                      <div class="col-xs-6">
+                          <br/><br/>
+                          <label>Minimum distance to travel (meters)</label>
+                          <input ng-model="randomWay.distance" class="form-control"/>
                       </div>
                                             
                       <div class="col-xs-6">              
